--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <script type="text/javascript" src="lib/plugins/debug/debugPanel.js"></script>
 
         <!-- Game Scripts -->
+	<script src="js/logic/caesar.js" type="text/javascript"></script>
         <script type="text/javascript" src="js/game.js"></script>
         <script type="text/javascript" src="build/js/resources.js"></script>
 
