--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
     <script type="text/javascript" src="js/entities/entities.js"></script>
     <script type="text/javascript" src="js/entities/cipher.js"></script>
+    <script type="text/javascript" src="js/entities/text.js"></script>
 
     <script type="text/javascript" src="js/screens/title.js"></script>
     <script type="text/javascript" src="js/screens/play.js"></script>
